Styling and calculation fixes

--- a/css/_chart.scss
+++ b/css/_chart.scss
@@ -1,7 +1,12 @@
 $rectDay-fill: yellow;
 $rectDay-stroke: black;
+$rect-background-fill: #5f47c2;
+
+
+.rect-background {
+  fill: $rect-background-fill;
+}
 
 .rectDay {
   fill: $rectDay-fill;
-  stroke: $rectDay-stroke;
 }
