--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,15 @@ body {
   background: #3a368f; }
 
 #vis {
-  width: 50%;
-  margin: 0 auto; }
+  width: 100%; }
+
+#form-holder {
+  margin-top: 1em;
+  margin-bottom: 1em; }
+  #form-holder input {
+    color: #ffffff;
+    font-size: 1em;
+    background-color: #522fa8; }
+  #form-holder .btn {
+    width: 100%;
+    background-color: #522fa8; }
